--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    background: #98ddff;
+    background: #f5dccb;
     color: #700000;
 }
 
@@ -118,14 +118,14 @@ body {
 }
 
 .hero-text {
-    max-width: 420px;
+    max-width: 450px;
 }
 
 .hero-text h1 {
     font-size: 65px;
     line-height: 1.1;
     font-family: 'Pacifico', sans-serif;
-    color: #fff;
+    color: #ffffff;
 }
  
 .hero-text h1 span {
@@ -159,7 +159,7 @@ body {
 }
 
 .hero-img img {
-    width: 400px;
+    width: 500px;
 }
 
 .subscribe {
